refact: ListedScheduler implemented to reduce quantity of info on ListScheduler endpoint
